--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,14 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Imports: 
+    coda,
+    dplyr,
+    ggplot2,
+    here,
+    magrittr,
+    nimble,
+    purrr,
+    rstan,
+    stringr,
+    tidyr
