--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,3 +5,7 @@ export(L)
 export(mask_by_spp)
 export(sim_dat)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
+importFrom(stats,quantile)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
