more documentation for mcmc_sum and plot_bias_vs_calls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(L)
 export(mask_by_spp)
+export(mcmc_sum)
 export(sim_dat)
 importFrom(magrittr,"%>%")
 importFrom(nimble,getNimbleOption)
