wrap up documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,13 +9,15 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Depends: 
+    nimble,
+    R (>= 2.10)
 Imports: 
     coda,
     dplyr,
     ggplot2,
     here,
     magrittr,
-    nimble,
     purrr,
     rlang,
     rstan,
@@ -23,3 +25,4 @@ Imports:
     tibble,
     tidyr,
     viridis
+LazyData: true
