make FE default to sample from all visits

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export("%>%")
 export("%notin%")
 export(L)
 export(mask_FE)
+export(mask_FE_all_visits)
 export(mask_by_spp)
+export(mask_sampled_visit)
 export(mcmc_sum)
 export(plot_bias_vs_calls)
 export(plot_coverage_vs_calls)
