--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,6 @@
 
 export("%>%")
 export("%notin%")
-export(L)
 export(make_not_confirmable)
 export(mask_FE_all_visits)
 export(mask_by_spp)
@@ -21,5 +20,7 @@ importFrom(magrittr,"%>%")
 importFrom(nimble,getNimbleOption)
 importFrom(rlang,.data)
 importFrom(stats,quantile)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
