--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,5 +27,6 @@ Imports:
     viridis
 LazyData: true
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    withr
 Config/testthat/edition: 3
